--- a/Jumping-square/style.css
+++ b/Jumping-square/style.css
@@ -7,3 +7,50 @@
 html {
   font-size: 65.5%;
 }
+
+.container {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+.wrapper {
+  width: 100rem;
+  height: 80rem;
+  background-color: #1f5050;
+  border-radius: 5rem;
+  box-shadow: 2rem 2rem 6rem #888;
+  position: relative;
+  overflow: hidden;
+}
+
+.wrapper div {
+  position: absolute;
+}
+
+.stick {
+  width: 3rem;
+  height: 40rem;
+  background-color: coral;
+  border-radius: 1rem 1rem 0 0;
+  bottom: 0;
+  transform-origin: bottom center;
+}
+
+.rubber {
+  width: 67rem;
+  height: 50rem;
+  left: 16.5rem;
+  bottom: 24rem;
+  box-shadow: 0 1rem 0 #bbb;
+}
+
+.square {
+  width: 14rem;
+  aspect-ratio: 1;
+  background-color: #fff;
+  border-radius: 2rem;
+  left: 44rem;
+  box-shadow: #555;
+}
