--- a/Jumping-square/style.css
+++ b/Jumping-square/style.css
@@ -43,7 +43,23 @@ html {
   height: 50rem;
   left: 16.5rem;
   bottom: 24rem;
+  border-bottom: 1rem solid coral;
   box-shadow: 0 1rem 0 #bbb;
+  animation: rubberAnim 2s infinite linear;
+}
+
+@keyframes rubberAnim {
+  0%,
+  20% {
+    border-radius: 0;
+    transform: translateY(0);
+  }
+
+  50%,
+  60% {
+    border-radius: 0 0 35rem 35rem;
+    transform: translateY(23rem);
+  }
 }
 
 .square {
@@ -53,4 +69,78 @@ html {
   border-radius: 2rem;
   left: 44rem;
   box-shadow: #555;
+  animation: squareAnim 2s infinite linear;
+}
+
+@keyframes squareAnim {
+  0% {
+    transform: translateY(5rem);
+  }
+
+  20% {
+    transform: translateY(40rem);
+  }
+
+  50%,
+  60% {
+    transform: translateY(64.5rem);
+  }
+
+  62% {
+    transform: translateY(45rem);
+  }
+
+  80% {
+    transform: translateY(10rem) rotateZ(90deg);
+  }
+
+  100% {
+    transform: translateY(5rem) rotateZ(90deg);
+  }
+}
+
+.left-stick {
+  left: 15rem;
+  box-shadow: 0.2rem 0 0.5rem #555;
+  animation: left-stickAnim 2s infinite linear;
+}
+
+@keyframes left-stickAnim {
+  0%,
+  20% {
+    transform: rotateZ(0);
+  }
+
+  50%,
+  65% {
+    transform: rotateZ(2deg);
+  }
+
+  80%,
+  100% {
+    transform: rotateZ(0);
+  }
+}
+
+.right-stick {
+  right: 15rem;
+  box-shadow: -0.2rem 0 0.5rem #555;
+  animation: right-stickAnim 2s infinite linear;
+}
+
+@keyframes right-stickAnim {
+  0%,
+  20% {
+    transform: rotateZ(0);
+  }
+
+  50%,
+  65% {
+    transform: rotateZ(-2deg);
+  }
+
+  80%,
+  100% {
+    transform: rotateZ(0);
+  }
 }
