--- a/3. Ball Animation/style.css
+++ b/3. Ball Animation/style.css
@@ -1,4 +1,20 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+}
+
+.wrapper {
+    width: 70rem;
+    aspect-ratio: 1;
+    background-image: url('assets/bg.jpg');
 }
