--- a/3. Ball Animation/style.css
+++ b/3. Ball Animation/style.css
@@ -40,7 +40,7 @@ body {
 @keyframes block1Anim {
     0% {
         transform: translateY(-38rem) rotateZ(0);
-        opacity: .5;
+        opacity: 0.5;
     }
 
     30% {
@@ -54,7 +54,7 @@ body {
 
     55%, 100% {
         transform: translateY(38rem) rotateZ(-180deg);
-        opacity: .5;
+        opacity: 0.5;
     }
 
 }
@@ -63,13 +63,13 @@ body {
     top: 16rem;
     right: 8rem;
     transform-origin: bottom left;
-    animation: block2Anim 5s infinite linear;
+    animation: block2Anim 5s 2.5s infinite linear;
 }
 
 @keyframes block2Anim {
     0% {
         transform: translateY(-38rem) rotateZ(0);
-        opacity: .5;
+        opacity: 0.5;
     }
 
     30% {
@@ -83,7 +83,7 @@ body {
 
     55%, 100% {
         transform: translateY(38rem) rotateZ(180deg);
-        opacity: .5;
+        opacity: 0.5;
     }
 
 }
@@ -97,4 +97,27 @@ body {
     position: absolute;
     left: 29rem;
     top: 22rem;
+    animation: ballAnim 2.5s 0.9s infinite linear;
+}
+
+@keyframes ballAnim {
+    0% {
+        transform: translateY(-20rem) scale(0.8, 1);
+    }
+
+    45% {
+        transform: translateY(0) scale(0.9, 1);
+    }
+
+    50% {
+        transform: translateY(2rem) scale(1, 0.7);
+    }
+
+    60% {
+        transform: translateY(-10rem) scale(0.9, 1) ;
+    }
+
+    100% {
+        transform: translateY(-20rem) scale(0.8, 1);
+    }
 }
