--- a/5. Flower/style.css
+++ b/5. Flower/style.css
@@ -7,3 +7,88 @@
 html {
   font-size: 62.5%;
 }
+
+.flower {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(236, 232, 226);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.petals {
+  width: 40rem;
+  height: 40rem;
+  position: relative;
+  transform: translateX(40deg);
+}
+
+.petal {
+  width: 15rem;
+  height: 15rem;
+  position: absolute;
+  top: 5rem;
+  left: 5rem;
+  transform-origin: bottom right;
+}
+
+.petal::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(rgba(255, 0, 195, 0.4), orange, red);
+  border-radius: 50% 50% 0 50%;
+  transform: skew(23deg, 23deg);
+  box-shadow: 0.3rem 0.3rem 0.3rem #bbb;
+  transform-origin: bottom right;
+}
+
+.petal:nth-child(1) {
+  transform: rotateZ(0deg);
+}
+
+.petal:nth-child(2) {
+  transform: rotateZ(30deg);
+}
+
+.petal:nth-child(3) {
+  transform: rotateZ(60deg);
+}
+
+.petal:nth-child(4) {
+  transform: rotateZ(90deg);
+}
+
+.petal:nth-child(5) {
+  transform: rotateZ(120deg);
+}
+
+.petal:nth-child(6) {
+  transform: rotateZ(150deg);
+}
+
+.petal:nth-child(7) {
+  transform: rotateZ(180deg);
+}
+
+.petal:nth-child(8) {
+  transform: rotateZ(210deg);
+}
+
+.petal:nth-child(9) {
+  transform: rotateZ(240deg);
+}
+
+.petal:nth-child(10) {
+  transform: rotateZ(270deg);
+}
+
+.petal:nth-child(11) {
+  transform: rotateZ(300deg);
+}
+
+.petal:nth-child(12) {
+  transform: rotateZ(340deg);
+}
