--- a/5. Flower/style.css
+++ b/5. Flower/style.css
@@ -11,7 +11,6 @@ html {
 .flower {
   width: 100%;
   height: 100vh;
-  background-color: rgb(236, 232, 226);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -91,4 +90,50 @@ html {
 
 .petal:nth-child(12) {
   transform: rotateZ(340deg);
+}
+
+.circle {
+  width: 5rem;
+  height: 5rem;
+  background-color: greenyellow;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+
+.stem {
+  position: absolute;
+  width: 2rem;
+  height: 60rem;
+  background-image: linear-gradient(
+    to right,
+    rgb(149, 235, 92),
+    green,
+    rgb(149, 235, 92)
+  );
+  transform: translateY(50%) rotateZ(7deg);
+  transform-origin: top;
+  z-index: -1;
+}
+
+.leaf {
+  width: 20rem;
+  height: 5rem;
+  background-color: lightseagreen;
+  position: absolute;
+  bottom: 25rem;
+}
+
+.leaf-right {
+  right: 2rem;
+  border-radius: 50% 50% 0 50%;
+  transform: skew(23deg, 23deg);
+}
+
+.leaf-left {
+  left: 2rem;
+  border-radius: 50% 50% 50% 0%;
+  transform: skew(-23deg, -23deg);
 }
