--- a/6. Atom Animation/style.css
+++ b/6. Atom Animation/style.css
@@ -7,3 +7,60 @@
 html {
   font-size: 62.5%;
 }
+
+body {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: rgb(46, 51, 80);
+}
+
+.wrapper {
+  width: 60rem;
+  aspect-ratio: 1;
+  display: grid;
+  place-items: center;
+  perspective: 100rem;
+  perspective-origin: 76% 27%;
+}
+
+.circle {
+  position: absolute;
+  width: 40rem;
+  aspect-ratio: 1;
+  border: 0.5rem dashed #0ff;
+  border-radius: 50%;
+  transform-style: preserve-3d;
+}
+
+.circle-1 {
+  transform: rotateY(70deg) rotateX(40deg);
+}
+
+.circle-2 {
+  transform: rotateY(70deg) rotateX(-40deg);
+}
+
+.circle-3 {
+  transform: rotateY(180deg) rotateX(90deg);
+}
+
+.ball {
+  width: 6rem;
+  aspect-ratio: 1;
+  background-image: radial-gradient(rgb(135, 214, 240), 70%, rgb(44, 44, 167));
+  border-radius: 50%;
+  position: absolute;
+  top: -3rem;
+  left: calc(50% -3rem);
+}
+
+.ball-1,
+.ball-2 {
+  transform: rotateY(-90deg);
+}
+
+.ball-3 {
+  transform: rotateY(90deg) rotateX(90deg);
+}
