--- a/8. Helicopter/style.css
+++ b/8. Helicopter/style.css
@@ -7,3 +7,25 @@
 html {
   font-size: 62.5%;
 }
+
+body {
+  width: 100%;
+  height: 100vh;
+  background-color: lightgreen;
+  display: grid;
+  place-items: center;
+}
+
+.container {
+  width: 150rem;
+  height: 80rem;
+  background-color: rgb(99, 179, 253);
+  display: grid;
+  place-items: center;
+}
+
+.helicopter {
+  width: 80rem;
+  height: 60rem;
+  background-color: #fff;
+}
