--- a/8. Helicopter/style.css
+++ b/8. Helicopter/style.css
@@ -68,3 +68,22 @@ body {
   top: 0.2rem;
   border-radius: 100% 0 40% 0;
 }
+
+.landing-skid {
+  width: 23rem;
+  height: 10rem;
+  border-bottom: 1rem solid #000;
+  border-left: 1rem solid transparent;
+  border-right: 1rem solid transparent;
+  border-radius: 0 0 2.5rem 5rem;
+}
+
+.landing-skid-1 {
+  top: 22rem;
+  left: 26rem;
+}
+
+.landing-skid-2 {
+  top: 20.5rem;
+  left: 26.5rem;
+}
